--- a/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
+++ b/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
@@ -47,6 +47,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 60px;
+    text-align: center;
 
     span {
       @include animatedHighlight;
@@ -95,6 +96,7 @@
     }
 
     &-button {
+      background-color: transparent;
       border-radius: 90px;
       color: $grey-color-darker;
       font-family: $font-inter;
@@ -108,6 +110,7 @@
       transition: all 180ms ease-out;
       white-space: nowrap;
       width: 190px;
+      z-index: 1;
 
       &--active {
         color: $black-color;
@@ -121,6 +124,7 @@
       position: absolute;
       transition: all 380ms $animation-2;
       width: 190px;
+      z-index: 0;
     }
   }
 
